test/corpus/macros.txt
================================================================================
basic link macro
================================================================================
{@link element/1}

--------------------------------------------------------------------------------

(source
  (line
    (macro
      (tag)
      (expression))))

================================================================================
nullary macro
================================================================================
{@time}

--------------------------------------------------------------------------------

(source
  (line
    (macro
      (tag))))

================================================================================
type macro with escape
================================================================================
{@type {options, edoc:option_list()@}}

--------------------------------------------------------------------------------

(source
  (line
    (macro
      (tag)
      (argument
        (macro_escape)))))
