test/corpus/quoting.txt
================================================================================
inline quote
================================================================================
`Foo'

--------------------------------------------------------------------------------

(source
  (line
    (inline_quote)))

================================================================================
double inline-quote
================================================================================
`` 'foo@erlang.org' ''

--------------------------------------------------------------------------------

(source
  (line
    (inline_quote)))

================================================================================
inline quote block
================================================================================
```Foo'''

--------------------------------------------------------------------------------

(source
  (line
    (inline_quote)))

================================================================================
multiline quote block
================================================================================
```
case X of
    {ok, Val} -> Val;
    error     -> Default
end
'''

--------------------------------------------------------------------------------

(source
  (line
    (block_quote
      (quote_marker)
      (quote_content)
      (quote_marker))))

================================================================================
quote block with language identifier
================================================================================
```none
+-+-+-+-+-+-+ foo +-+-+-+-+-+-+
'''

--------------------------------------------------------------------------------

(source
  (line
    (block_quote
      (quote_marker)
      (language_identifier)
      (quote_content)
      (quote_marker))))
