test/corpus/xhtml.txt
================================================================================
em tag
================================================================================
<em>Hello</em>

--------------------------------------------------------------------------------

(source
  (line
    (em_xhtml_tag
      (open_xhtml_tag)
      (xhtml_tag_content)
      (close_xhtml_tag))))

================================================================================
strong tag
================================================================================
<strong>Hello</strong>
<strong>Hello
World</strong>

--------------------------------------------------------------------------------

(source
  (line
    (strong_xhtml_tag
      (open_xhtml_tag)
      (xhtml_tag_content)
      (close_xhtml_tag)))
  (line
    (strong_xhtml_tag
      (open_xhtml_tag)
      (xhtml_tag_content)
      (close_xhtml_tag))))

================================================================================
multi-line list
================================================================================
<ul>
<li>Foo</li>
<li>Bar</li>
<li>Baz</li>
<ul>

--------------------------------------------------------------------------------

(source
  (line
    (xhtml_tag))
  (line
    (xhtml_tag))
  (line
    (xhtml_tag))
  (line
    (xhtml_tag))
  (line
    (xhtml_tag)))
